--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,6 +63,10 @@
 				<groupId>io.fabric8</groupId>
 				<artifactId>fabric8-maven-plugin</artifactId>
 				<version>4.4.1</version>
+				<configuration>
+				    <generateRoute>true</generateRoute>
+				    <namespace>amsidh-project</namespace>
+				</configuration>
 				<executions>
 					<execution>
 						<id>fmp</id>
@@ -75,5 +80,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
