Updated pom file with skip docker machine check

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 				<configuration>
 				    <generateRoute>true</generateRoute>
 				    <namespace>amsidh-project</namespace>
+				    <skipMachine>true</skipMachine>
 				</configuration>
 				<executions>
 					<execution>
