--- a/pom.xml
+++ b/pom.xml
@@ -59,15 +59,10 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>fabric8-maven-plugin</artifactId>
 				<version>4.4.1</version>
-				<configuration>
-				    <generateRoute>true</generateRoute>
-				    <namespace>amsidh-project</namespace>
-				    <skipMachine>true</skipMachine>
-				</configuration>
 				<executions>
 					<execution>
 						<id>fmp</id>
@@ -78,7 +73,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
