--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.amsidh.mvc</groupId>
-	<artifactId>SpringBootFabricOpenShitDemo</artifactId>
+	<artifactId>springbootfabricopenshitdemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringBootFabricOpenShitDemo</name>
 	<description>SpringBootFabricOpenShitDemo project for Spring Boot</description>
@@ -59,7 +59,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>fabric8-maven-plugin</artifactId>
 				<version>4.4.1</version>
@@ -73,7 +73,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
 		</plugins>
 	</build>
 </project>
